--- a/Hack.index/Linux/3.0_special-priv.md
+++ b/Hack.index/Linux/3.0_special-priv.md
@@ -25,12 +25,12 @@ If backup directories accessible →
 
 ### Core Tools:
 
-- [[4_Privilege_Escalation/LinPEAS, WinPEAS, & SharPEAS]]
-- [[4_Privilege_Escalation/GTFO Bins]]
+- [[2_Studies/Courses/Current/CERTPREP - PJPT-Practical Jr Pen Tester/Practical Ethical Hacking/4_Privilege_Escalation/LinPEAS, WinPEAS, & SharPEAS]]
+- [[2_Studies/Courses/Current/CERTPREP - PJPT-Practical Jr Pen Tester/Practical Ethical Hacking/4_Privilege_Escalation/GTFO Bins]]
 
 ### Secondary Actions:
 
-- [[3_Exploitation/Hashcracking]]
+- [[2_Studies/Courses/Current/CERTPREP - PJPT-Practical Jr Pen Tester/Practical Ethical Hacking/3_Exploitation/Hashcracking]]
 
 ### Supplemental / Contextual
 
